Turned off autocomplete, fixed mobile z-index

--- a/Marist Chat App/MobileStyles.css
+++ b/Marist Chat App/MobileStyles.css
@@ -18,6 +18,7 @@ body {
     height: 40px;
     background: var(--main-colour);
     color: var(--text-colour);
+    z-index:100;
 }
 
 .loginStatus {
@@ -50,6 +51,7 @@ body {
     height: 94vh;
     background: var(--main-colour);
     color: var(--text-colour);
+    z-index: 99;
 }
 
 .hamburger > ul > li > a {
@@ -123,7 +125,6 @@ body {
     background-color: var(--main-colour);
     color: var(--text-colour);
     cursor: move;
-    z-index: 10;
 }
 
 .hamburger > ul > li {
@@ -158,7 +159,6 @@ body {
     width: calc(100% - 10vw);
     position: fixed;
     bottom: 3vh;
-    z-index: -1;
 }
 
     .messageControls > input[type="button"], .messageControls > input[type="submit"] {
